--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -22,6 +22,8 @@
     width: 180px;
     border-bottom: 3px solid black;
     color: transparent;
+    text-indent: -9999px;
+    user-select: none;
     margin-right: 2em;
     padding-top: 0.5em;
 
