--- a/public/css/clientes.css
+++ b/public/css/clientes.css
@@ -1,20 +1,18 @@
 .clientesContenedor {
-    padding: 2em 0;
-    padding: 0 8px;
+    padding: 2em 0 0 0;
+    /*padding: 0 8px;*/
     margin-top: 8em;
     color: white;
     background: rgb(1,0,0);
     background: linear-gradient(180deg, rgba(1,0,0,0) 0%, rgba(11,0,0,1) 16%);
 }
 .containerClientes {
-    max-width: 1126px;
-    margin: auto;
+    /*max-width: 1126px;
+    margin: auto;*/
 }
 .clientesContenedor h1 {
     font-size: 35px;
-    text-align: left;
     padding-top: 2em;
-   
 }
 
 
