--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -4,11 +4,11 @@
 }
 
 header {
-    background-image: url('../public/img/fondo-header.png');
-    height: 100vh;
+    /*background-image: url('/img/fondo-header.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover;*/
+    height: 100vh;
     position: relative;
 }
 
@@ -77,3 +77,7 @@ nav ul li a {
 nav ul {
     margin: 0;
 }
+
+.claseBgHamburger {
+    background: #000; 
+  }
